--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,31 +1,13 @@
 @import "colors";
 @import "mixins";
+@import "header";
 
-* {
-  font-family: "roboto";
-  text-decoration: none;
-  color: black;
+@include full_page;
+
+header{
+  @include header_main;
 }
 
-body {
-  margin: 0%;
-}
-
-
-header {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  a {
-    margin: 0;
-    padding: 0;
-  }
-  img {
-    height: 25px;
-    margin: 10px;
-    margin-top: 25px;
-  }
-}
 
 .find_container {
   display: flex;
@@ -119,6 +101,9 @@ header {
   &_container {
     &_card {
       @include resto_card;
+      @include heart_logo;
+
+      position: relative;
       margin: 20px;
       height: 230px;
 
@@ -137,36 +122,20 @@ header {
         justify-content: center;
         margin: 0px 10px;
 
-        .fa-heart{
-          align-self: flex-end;
-          font-size: 30px;
+        span{
+          margin-bottom: 5px;
+        }
+        .name{
+          font-weight: bold;
         }
       }
+
+
+
     }
   }
 }
 
 footer{
-  display: flex;
-  flex-direction: column;
-  background-color: #353535;
-  padding-bottom: 30px;
-
-  svg{
-    margin: 20px;
-    width: 30%;
-  }
-
-  .footer_ico{
-    margin: 0px 0px 5px 20px;
-
-    .fas{
-      color: white;
-      width: 10px;
-    }
-  }
-  a{
-    margin: 0px 0px 5px 20px;
-    color: white;
-  }
+  @include footer
 }
