Animation loader fini, page html pour les menus, début css menu

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,6 @@
 @import "colors";
+@import "animations";
+
 
 @mixin full_page {
   * {
@@ -40,38 +42,8 @@
 }
 
 @mixin heart_logo {
-  .fa-heart {
     position: absolute;
     right: 30px;
     bottom: 20px;
     font-size: 30px;
-  }
-}
-
-@mixin footer {
-    display: flex;
-    flex-direction: column;
-    background-color: #353535;
-    padding-bottom: 30px;
-  
-    svg{
-      margin: 20px;
-      width: 30%;
-      path{                       //logo color white
-        fill: white; 
-      }
-    }
-  
-    .footer_ico{
-      margin: 0px 0px 5px 20px;
-  
-      .fas{
-        color: white;
-        width: 10px;
-      }
-    }
-    a{
-      margin: 0px 0px 5px 20px;
-      color: white;
-    }
 }
