--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,13 @@
 @import "colors";
 @import "mixins";
 @import "header";
+@import "menu";
 
 @include full_page;
 
-header{
+header {
   @include header_main;
 }
-
 
 .find_container {
   display: flex;
@@ -39,10 +39,9 @@ header{
       h1 {
         margin: auto;
         padding-top: 30px;
-        // border: 1px solid black;
         width: 70%;
       }
-      h3 {
+      p {
         margin: auto;
         padding: 15px;
         width: 90%;
@@ -50,7 +49,8 @@ header{
       }
     }
     button {
-      @include btn font-size: 1em;
+      @include btn;
+      font-size: 1em;
       width: 210px;
       height: 50px;
       margin: 20px;
@@ -95,17 +95,72 @@ header{
 }
 
 .resto {
+  position: relative;
   object-fit: cover;
   background-color: $grey_card;
   margin-bottom: 50px;
+  h2 {
+    padding: 20px;
+    margin: 0%;
+  }
+
+  .loading_animation {
+    display: block;
+    width: 50px;
+    height: 50px;
+    animation: display_load 2s both;
+    // animation-timing-function: cubic-bezier(1,0,1,0) ;
+    position: absolute;
+    top: -5px;
+    left: 140px;
+    .circle {
+      box-sizing: border-box;
+      display: block;
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      margin: 24px;
+      border: 1px solid $primary;
+      border-radius: 50%;
+      animation: loading 2s infinite;
+      animation-delay: 0.15s;
+      border-color: $secondary transparent $secondary transparent;
+    }
+    .line {
+      box-sizing: border-box;
+      display: block;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      margin: 32px;
+      border: 2px solid $primary;
+      border-radius: 50%;
+      animation: loading 1.5s infinite reverse;
+      border-color: $secondary $primary $secondary $primary;
+    }
+  }
   &_container {
+    display: block;
+
     &_card {
+      animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
       @include resto_card;
-      @include heart_logo;
 
       position: relative;
       margin: 20px;
       height: 230px;
+      &:nth-child(1) {
+        animation-delay: 1s;
+      }
+      &:nth-child(2) {
+        animation-delay: 1.15s;
+      }
+      &:nth-child(3) {
+        animation-delay: 1.3s;
+      }
+      &:nth-child(4) {
+        animation-delay: 1.45s;
+      }
 
       img {
         border-radius: 20px 20px 0px 0px;
@@ -114,7 +169,7 @@ header{
         object-fit: cover;
       }
 
-      .legend{
+      .legend {
         width: 50%;
         height: 30%;
         display: flex;
@@ -122,20 +177,48 @@ header{
         justify-content: center;
         margin: 0px 10px;
 
-        span{
+        span {
           margin-bottom: 5px;
         }
-        .name{
+        .name {
           font-weight: bold;
         }
       }
 
+      .fa-heart {
+        @include heart_logo;
 
-
+        &:hover {
+          animation: anim_test 2s both;
+        }
+      }
     }
   }
 }
 
-footer{
-  @include footer
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  padding-bottom: 30px;
+
+  h2 {
+    font-family: "Shrikhand", cursive;
+    color: #fff;
+    font-weight: 100;
+    margin: 20px;
+  }
+
+  .footer_ico {
+    margin: 0px 0px 5px 20px;
+
+    .fas {
+      color: white;
+      width: 10px;
+    }
+  }
+  a {
+    margin: 0px 0px 5px 20px;
+    color: white;
+  }
 }
