--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -9,6 +9,7 @@
     color: black;
   }
   body {
+    background-color: $grey_card;
     margin: 0%;
   }
 }
@@ -46,4 +47,34 @@
     right: 30px;
     bottom: 20px;
     font-size: 30px;
+}
+
+@mixin menu_card {
+  &_card {
+    height: 40px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgb(214, 214, 214);
+    background: white;
+    padding: 10px;
+    padding-right: 20px;
+    margin: 10px 0px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+
+    .name {
+        font-size: 15px;
+      font-weight: 600;
+    }
+    .subname{
+        font-size: 14px;
+    }
+    .prix{
+        font-size: 12px;
+        font-weight: bold;
+        position: relative;
+        align-self: flex-end;
+        top: 11px;
+    }
+  }
 }
