--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,14 +1,46 @@
 @mixin header_main {
+  height: 50px;
+  background-color: white;
   display: flex;
   width: 100%;
   justify-content: center;
   a {
     margin: 0;
     padding: 0;
+    align-self: center;
   }
   img {
-    height: 25px;
-    margin: 10px;
-    margin-top: 25px;
+    height: 24px;
+    margin-top: 10px;
+  }
+
+}
+
+@mixin header_menu {
+  position: fixed;
+  height: 50px;
+  background-color: white;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-flow: column wrap;
+  align-self: center;
+  z-index:1;
+  a {
+    margin: 0;
+    padding: 0;
+  }
+  img {
+    height: 24px;
+    margin-top: 10px;
+
+  }
+  .arrow {
+    align-self: flex-start;
+    .fas{
+      position: relative;
+      left: 20px;
+      color: rgb(77, 77, 77);
+    }
   }
 }
