--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,11 +5,15 @@
 
 @include full_page;
 
-header {
+.header_main {
   @include header_main;
+}
+.header_menu{
+  @include header_menu;
 }
 
 .find_container {
+
   display: flex;
   flex-direction: column;
 
@@ -60,7 +64,8 @@ header {
 }
 
 .use_container {
-  margin: 20px;
+  background-color: white;
+  padding: 20px;
 
   &_card_template {
     @include use_card;
@@ -104,11 +109,13 @@ header {
     margin: 0%;
   }
 
+  // loader -------------------------------------------------->
+
   .loading_animation {
     display: block;
     width: 50px;
     height: 50px;
-    animation: display_load 2s both;
+    animation: display_load 3s both;
     // animation-timing-function: cubic-bezier(1,0,1,0) ;
     position: absolute;
     top: -5px;
@@ -139,6 +146,7 @@ header {
       border-color: $secondary $primary $secondary $primary;
     }
   }
+
   &_container {
     display: block;
 
@@ -149,6 +157,9 @@ header {
       position: relative;
       margin: 20px;
       height: 230px;
+
+      // animation delay ------------------------------------->
+
       &:nth-child(1) {
         animation-delay: 1s;
       }
