Média query tablet

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -34,6 +34,7 @@
 }
 
 .menu_container{
+
     h2{
         font-size: 16px;
         font-weight: 400;
@@ -49,18 +50,26 @@
 }
 
 .entree {
-    margin: 20px 0px;
-    @include menu_card;
+  margin: 20px 0px;
+  @include menu_card;
+  animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) .30s 1s both;
 }
 .plats {
-    margin: 20px 0px;
-    @include menu_card;
+  margin: 20px 0px;
+  @include menu_card;
+  animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s 1s both;
+
 }
 .dessert {
     margin: 20px 0px;
     @include menu_card;
+  animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1.3s 1s both;
+
 }
 
+.menu_container{
+
+}
 .menu button{
     @include btn;
     padding: 10px 40px;
