--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,6 @@
 @import "colors";
 @import "animations";
 
-
 @mixin full_page {
   * {
     font-family: "roboto";
@@ -43,14 +42,27 @@
 }
 
 @mixin heart_logo {
-    position: absolute;
-    right: 30px;
-    bottom: 20px;
-    font-size: 30px;
+  position: absolute;
+  right: 30px;
+  bottom: 20px;
+  font-size: 30px;
 }
 
 @mixin menu_card {
+  :nth-child(1){
+    animation-delay: .45s;
+  }
+  :nth-child(2){
+    animation-delay: 1s;
+  }
+  :nth-child(3){
+    animation-delay: 1.15s;
+  }
+  :nth-child(4){
+    animation-delay: 1.30s;
+  }
   &_card {
+    animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
     height: 40px;
     border-radius: 20px;
     box-shadow: 0px 0px 5px rgb(214, 214, 214);
@@ -63,18 +75,34 @@
     justify-content: space-around;
 
     .name {
-        font-size: 15px;
+      font-size: 15px;
       font-weight: 600;
     }
-    .subname{
-        font-size: 14px;
+    .subname {
+      font-size: 14px;
     }
-    .prix{
-        font-size: 12px;
-        font-weight: bold;
-        position: relative;
-        align-self: flex-end;
-        top: 11px;
+    .prix {
+      font-size: 12px;
+      font-weight: bold;
+      position: relative;
+      align-self: flex-end;
+      top: 11px;
+    }
+    
+    :nth-child(1){
+      overflow: hidden;
+
+      white-space: nowrap;
+      width: 90%;
+      text-overflow: ellipsis;
+    }
+    :nth-child(2){
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 85%;
+      white-space: nowrap;
+
+
     }
   }
 }
