--- a/scss/style.css
+++ b/scss/style.css
@@ -216,9 +216,33 @@
 
 .entree {
   margin: 20px 0px;
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 0.3s 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 0.3s 1s both;
+}
+
+.entree :nth-child(1) {
+  -webkit-animation-delay: .45s;
+          animation-delay: .45s;
+}
+
+.entree :nth-child(2) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.entree :nth-child(3) {
+  -webkit-animation-delay: 1.15s;
+          animation-delay: 1.15s;
+}
+
+.entree :nth-child(4) {
+  -webkit-animation-delay: 1.30s;
+          animation-delay: 1.30s;
 }
 
 .entree_card {
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
   height: 40px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 5px #d6d6d6;
@@ -256,11 +280,49 @@
   top: 11px;
 }
 
+.entree_card :nth-child(1) {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 90%;
+  text-overflow: ellipsis;
+}
+
+.entree_card :nth-child(2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 85%;
+  white-space: nowrap;
+}
+
 .plats {
   margin: 20px 0px;
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s 1s both;
+}
+
+.plats :nth-child(1) {
+  -webkit-animation-delay: .45s;
+          animation-delay: .45s;
+}
+
+.plats :nth-child(2) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.plats :nth-child(3) {
+  -webkit-animation-delay: 1.15s;
+          animation-delay: 1.15s;
+}
+
+.plats :nth-child(4) {
+  -webkit-animation-delay: 1.30s;
+          animation-delay: 1.30s;
 }
 
 .plats_card {
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
   height: 40px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 5px #d6d6d6;
@@ -298,11 +360,49 @@
   top: 11px;
 }
 
+.plats_card :nth-child(1) {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 90%;
+  text-overflow: ellipsis;
+}
+
+.plats_card :nth-child(2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 85%;
+  white-space: nowrap;
+}
+
 .dessert {
   margin: 20px 0px;
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1.3s 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1.3s 1s both;
+}
+
+.dessert :nth-child(1) {
+  -webkit-animation-delay: .45s;
+          animation-delay: .45s;
+}
+
+.dessert :nth-child(2) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.dessert :nth-child(3) {
+  -webkit-animation-delay: 1.15s;
+          animation-delay: 1.15s;
+}
+
+.dessert :nth-child(4) {
+  -webkit-animation-delay: 1.30s;
+          animation-delay: 1.30s;
 }
 
 .dessert_card {
+  -webkit-animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
+          animation: display_card cubic-bezier(0.83, 0.02, 0.36, 1) 1s both;
   height: 40px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 5px #d6d6d6;
@@ -338,6 +438,20 @@
   -ms-flex-item-align: end;
       align-self: flex-end;
   top: 11px;
+}
+
+.dessert_card :nth-child(1) {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 90%;
+  text-overflow: ellipsis;
+}
+
+.dessert_card :nth-child(2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 85%;
+  white-space: nowrap;
 }
 
 .menu button {
@@ -718,5 +832,36 @@ footer .footer_ico .fas {
 footer a {
   margin: 0px 0px 5px 20px;
   color: white;
+}
+
+@media screen and (min-width: 426px) and (max-width: 1000px) {
+  section {
+    margin: auto;
+    max-width: 768px;
+  }
+  .find_container_reserve {
+    width: 100%;
+  }
+  .use_container {
+    padding-top: 10px;
+    padding-bottom: 40px;
+  }
+  .use_container_card_template {
+    margin: auto;
+    margin-top: 20px;
+    width: 70%;
+  }
+  .use_container_card_template .number {
+    position: relative;
+    left: -10px;
+  }
+  .resto_container_card {
+    margin: auto;
+    margin-top: 20px;
+    width: 50%;
+  }
+  footer {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
